es/es.svc.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: es-en
spec: 
  ports:
  - port: 9200
    targetPort: 9200
  selector: 
    app: es-en
